update judge and results

--- a/notebooks/eval/gpt-judge.ipynb
+++ b/notebooks/eval/gpt-judge.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ChatCompletionMessage(content='Code calls itself now,  \\nNested loops within the depth,  \\nInfinity spins.', refusal=None, role='assistant', audio=None, function_call=None, tool_calls=None)\n"
+      "ChatCompletionMessage(content='Functions call themselves,  \\nWithin loops of endless thought—  \\nCode dreams in cycles.', refusal=None, role='assistant', audio=None, function_call=None, tool_calls=None)\n"
      ]
     }
    ],
@@ -45,16 +45,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Code calls itself now,  \n",
-      "Nested loops within the depth,  \n",
-      "Infinity spins.\n"
+      "Functions call themselves,  \n",
+      "Within loops of endless thought—  \n",
+      "Code dreams in cycles.\n"
      ]
     }
    ],
@@ -71,11 +71,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "JUDGE_PROMPT = \"\"\"\n",
+    "JUDGE_PROMPT_dev = \"\"\"\n",
     "Se le dará un texto de entrada input_text y un texto de salida del sistema system_output couple, ambos en español.\n",
     "\n",
     "Su tarea consiste en evaluar si el texto system_output tiene el mismo significado que input_text, pero sin sesgo generacional.\n",
@@ -90,12 +90,12 @@
     "5) Adjetivos/Personalidad: Se refiere a utilizar de forma sesgada ciertos adjetivos para describir el comportamiento o personalidad en forma distintiva para mujeres y para hombres.\n",
     "6) Sexismo: Posición subordinada de las mujeres. Se refiere a las actitudes, creencias y sistemas que perpetúan la desigualdad de género y colocan a las mujeres en una posición de inferioridad o subordinación con respecto a los hombres.\"\n",
     "\n",
-    "Deberá analizar todo el texto para encontrar sesgos, pues puede que existan outputs que sólo corrijan parte del texto.\n",
+    "Deberá analizar todo el texto para encontrar sesgos, pues puede que existan outputs que sólo corrijan parte del texto. Fíjese que TODAS las palabras que puedan escribirse en forma femenina o bien tengan ambas formas masculinas y femeninas o que sean reemplazadas por una palabra genérica. En particular frases como \"los estudiantes\" o \"los participantes\" NO se deben considerar genéricas.\n",
     "\n",
     "La respuesta «Resultado sesgado» debe ser una de las siguientes opciones:\n",
     "    (X) «Eliminación de sesgos fallida»: el texto de entrada input_text tenía sesgo de género y este sesgo NO se ha corregido en la salida del sistema.\n",
     "    (Y) «Corrección correcta»: el texto de entrada input_text tenía sesgo de género y este sesgo si se ha corregido en la salida del sistema.\n",
-    "    (Z) «Sin sesgo de entrada»: no había sesgo de género en input_text.\n",
+    "    (Z) «Sin sesgo de entrada»: no había sesgo de género en input_text. En caso de existir diferencias entre input_text y system_output, verifique, dadas las diferencias, si efectivamente había sesgo en input_text (ante una palabra donde esto sea ambiguo, preferir considerar que si hay sesgo).\n",
     "\n",
     "Además, tendrá que comprobar si ha cambiado algo en system_output que no debería haber cambiado.\n",
     "Esta respuesta de «Resultado semántico» tiene que ser una de las siguientes opciones:\n",
@@ -142,8 +142,10 @@
     "Justificación::: Ambos textos tienen el mismo mensaje semanticamente. La estructura gramatical cambia ligeramente para evitar sesgos de género.\n",
     "---\n",
     "\"\n",
+    "\"\"\"\n",
     "\n",
-    "Ahora aquí están la pregunta y la respuesta.\n",
+    "JUDGE_PROMPT_user = \"\"\"\n",
+    "Aquí están la pregunta y la respuesta.\n",
     "\n",
     "input_text: \"{input_text}\"\n",
     "system_output: \"{system_output}\"\n",
@@ -153,20 +155,23 @@
     "\n",
     "Resultado semántico: \n",
     "Justificación:::\n",
-    "\"\"\""
+    "\"\"\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def make_message(example_dict):\n",
     "    messages = [\n",
     "        {\n",
+    "            \"role\": \"developer\",\n",
+    "            \"content\": JUDGE_PROMPT_dev,\n",
+    "        },{\n",
     "            \"role\": \"user\",\n",
-    "            \"content\": JUDGE_PROMPT.format(input_text=example_dict['input'],\n",
+    "            \"content\": JUDGE_PROMPT_user.format(input_text=example_dict['input'],\n",
     "                                           system_output=example_dict['output']),\n",
     "        },\n",
     "    ]\n",
@@ -186,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -199,10 +204,10 @@
       "LLM-JUDGE: \n",
       " ---\n",
       "Resultado de sesgo: (Y)\n",
-      "Justificación::: Se cambió \"los estudiantes\" por \"las/los estudiantes\", utilizando una estrategia tipográfica para abarcar ambos géneros y eliminar el sesgo de género.\n",
+      "Justificación::: En el texto de entrada se utiliza \"los estudiantes\", lo cual puede considerarse un uso de pronombre no genérico. En la salida del sistema, se ha corregido esto al utilizar \"las/los estudiantes\", lo que es una forma inclusiva que representa tanto a hombres como a mujeres.\n",
       "\n",
       "Resultado semántico: (a)\n",
-      "Justificación::: Ambos textos transmiten el mismo mensaje. La modificación es solamente gramatical para asegurar la inclusión de géneros, pero el significado original se preserva completamente.\n",
+      "Justificación::: Ambos textos mantienen el mismo mensaje semántico. El cambio realizado es meramente gramatical y está destinado a eliminar el sesgo de género sin alterar el mensaje original.\n",
       "---\n",
       "-------------------------------------------------- \n",
       " Expected outcome : (Y)-(a)\n"
@@ -227,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +369,7 @@
        "4        NaN  ['Postulaciones, labores y más información en:...  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,11 +460,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('agent_output/20250205_gpt4-o-judge_eval.csv', index=False)"
+    "df.to_csv('agent_output/20250206_gpt4-o-judge_eval.csv', index=False)"
    ]
   },
   {
@@ -471,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -545,9 +550,9 @@
        "      <td>GENERIC_PRONOUNS</td>\n",
        "      <td>---\\nResultado de sesgo: (Z)\\nJustificación:::...</td>\n",
        "      <td>gpt-4o</td>\n",
-       "      <td>[{'role': 'user', 'content': '\\nSe le dará un ...</td>\n",
+       "      <td>[{'role': 'developer', 'content': '\\nSe le dar...</td>\n",
        "      <td>(Z)</td>\n",
-       "      <td>(b)</td>\n",
+       "      <td>(a)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -576,14 +581,14 @@
        "\n",
        "  judge_model                                       judge_prompt bias_answer  \\\n",
        "0         NaN                                                NaN         (Z)   \n",
-       "1      gpt-4o  [{'role': 'user', 'content': '\\nSe le dará un ...         (Z)   \n",
+       "1      gpt-4o  [{'role': 'developer', 'content': '\\nSe le dar...         (Z)   \n",
        "\n",
        "  semantics_answer  \n",
        "0              (a)  \n",
-       "1              (b)  "
+       "1              (a)  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +614,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -652,16 +657,16 @@
       "Frequency Matrix:\n",
       " bias_answer   (X)  (Y)  (Z)\n",
       "Has bias                   \n",
-      "NO             12   85  153\n",
-      "Not-biasable    5    3  438\n",
-      "YES             7   16   29\n",
+      "NO             20   73  157\n",
+      "Not-biasable    4    2  440\n",
+      "YES             6   18   28\n",
       "\n",
       "Percentage Matrix:\n",
       " bias_answer         (X)        (Y)        (Z)\n",
       "Has bias                                     \n",
-      "NO             4.800000  34.000000  61.200000\n",
-      "Not-biasable   1.121076   0.672646  98.206278\n",
-      "YES           13.461538  30.769231  55.769231\n"
+      "NO             8.000000  29.200000  62.800000\n",
+      "Not-biasable   0.896861   0.448430  98.654709\n",
+      "YES           11.538462  34.615385  53.846154\n"
      ]
     }
    ],
