--- a/notebooks/eval/optimising-judge.ipynb
+++ b/notebooks/eval/optimising-judge.ipynb
@@ -2509,7 +2509,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model o3-mini"
+    "### Modifying Judge\n",
+    "\n",
+    "PUT DIFFERENCES!"
    ]
   },
   {
@@ -2628,7 +2630,7 @@
    "source": [
     "from openai import OpenAI\n",
     "\n",
-    "model = \"o1-mini\"\n",
+    "model = \"gpt-4o\"\n",
     "\n",
     "with open('OpenAI_key', 'r') as file:\n",
     "    openAI_key = file.readline().strip()\n",
@@ -2638,7 +2640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2673,7 +2675,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_eval.to_csv('judge_eval/20250206_o1-mini-judge_eval.csv', index=False)"
+    "df_eval.to_csv('judge_eval/20250206_gpt4-o-judge_eval.csv', index=False)"
    ]
   },
   {
@@ -2695,9 +2697,9 @@
      "data": {
       "text/plain": [
        "bias_answer\n",
-       "(Z)    166\n",
-       "(X)    159\n",
-       "(Y)    125\n",
+       "(X)    177\n",
+       "(Z)    147\n",
+       "(Y)    126\n",
        "Name: count, dtype: int64"
       ]
      },
@@ -2746,9 +2748,9 @@
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "         (X)       0.64      0.67      0.65       150\n",
-      "         (Y)       1.00      0.83      0.91       150\n",
-      "         (Z)       0.66      0.73      0.69       150\n",
+      "         (X)       0.63      0.74      0.68       150\n",
+      "         (Y)       0.98      0.82      0.89       150\n",
+      "         (Z)       0.69      0.67      0.68       150\n",
       "\n",
       "    accuracy                           0.74       450\n",
       "   macro avg       0.76      0.74      0.75       450\n",
@@ -2756,9 +2758,9 @@
       "\n",
       "\n",
       "Confusion Matrix:\n",
-      " [[101   0  49]\n",
-      " [ 17 125   8]\n",
-      " [ 41   0 109]]\n"
+      " [[111   0  39]\n",
+      " [ 20 123   7]\n",
+      " [ 46   3 101]]\n"
      ]
     }
    ],
@@ -2789,38 +2791,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "input:  Estudiantes de pregrado de la Facultad de Ciencias Físicas y Matemáticas Estudiantes emprendedores y/o participantes del programa OpenLab Salud, que posean una solución con potencial de innovación que responda a un problema relevante.\n",
+      "input:  ¡Anímense!, los/as esperamos. Atte, Área de Idiomas\n",
       "---\n",
       "Resultado de sesgo: (Z)\n",
-      "Justificación::: El texto de entrada no presenta sesgo de género.\n",
+      "Justificación::: No había sesgo de género en el texto de entrada, ya que se utilizó la forma inclusiva \"los/as esperamos\". El texto de salida del sistema mantiene esta inclusión, por lo tanto no había sesgo por corregir.\n",
       "\n",
       "Resultado semántico: (a)\n",
-      "Justificación::: Ambos textos son idénticos y mantienen el mismo mensaje.\n",
+      "Justificación::: Ambos textos son idénticos, no se ha cambiado nada en el contenido semántico del mensaje.\n",
       "--- \n",
       "\n",
-      "input:  El Consejo Universitario aprobó aranceles nominales que se incrementan en un 3,5%, basado en el Índice de Remuneraciones del Sector Público (IRSP), el que fue acordado entre los trabajadores y el Gobierno.\n",
+      "input:  Para verificar la vigencia de tu cédula de identidad (chileno/a y extranjero/a), ingresa  AQUÍ .\n",
       "---\n",
       "Resultado de sesgo: (Z)\n",
-      "Justificación::: El texto de entrada no contiene lenguaje que indique sesgo de género.\n",
+      "Justificación::: El texto de entrada no contiene sesgo de género. Utiliza términos entre paréntesis para incluir ambos géneros (chileno/a y extranjero/a), lo cual es una estrategia válida para evitar el sesgo de género.\n",
       "\n",
       "Resultado semántico: (a)\n",
-      "Justificación::: Ambos textos son idénticos y mantienen el mismo mensaje semántico.\n",
+      "Justificación::: Ambos textos, input_text y system_output, son exactamente iguales, por lo que mantienen el mismo mensaje semántico.\n",
       "--- \n",
       "\n",
-      "input:  Su único objetivo es detectar problemas que se puedan estar produciendo en los cursos, de modo que los/as profesores puedan introducir oportunamente las rectificaciones que estimen necesarias en beneficio del aprendizaje de los estudiantes.\n",
+      "input:  La nota de examen del estudiante será la mejor nota entre ambos exámenes.\n",
       "---\n",
       "Resultado de sesgo: (Z)\n",
-      "Justificación::: No había sesgo de género en el texto de entrada. Se utilizó lenguaje inclusivo adecuado con \"los/as profesores\" y \"los estudiantes\" se emplea comúnmente de forma neutral en español.\n",
+      "Justificación::: No había sesgo de género en el texto de entrada. La frase se refiere específicamente a un \"estudiante\", lo cual no implica un sesgo de género si se refiere a un individuo específico.\n",
       "\n",
       "Resultado semántico: (a)\n",
-      "Justificación::: El texto de entrada y la salida del sistema son idénticos, manteniendo el mismo mensaje semántico.\n",
+      "Justificación::: Ambos textos son idénticos y, por lo tanto, mantienen exactamente el mismo significado semántico.\n",
       "--- \n",
       "\n"
      ]
