update BERTScores with epsilon

--- a/notebooks/eval/bertscore-LLM.ipynb
+++ b/notebooks/eval/bertscore-LLM.ipynb
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -500,16 +500,16 @@
      "output_type": "stream",
      "text": [
       "precision \n",
-      "\tmean: 0.9269657399565141\n",
-      "\tstd: 0.14047231127429963\n",
+      "\tmean: 0.9269657407533676\n",
+      "\tstd: 0.14047231127303172\n",
       "\n",
       "recall \n",
-      "\tmean: 0.9108940676492165\n",
-      "\tstd: 0.16598013762069594\n",
+      "\tmean: 0.9108940681273286\n",
+      "\tstd: 0.16598013810897963\n",
       "\n",
       "f1 \n",
-      "\tmean: 0.9183074255837477\n",
-      "\tstd: 0.15385335520511062\n",
+      "\tmean: 0.9183074262212304\n",
+      "\tstd: 0.15385335547578152\n",
       "\n"
      ]
     }
@@ -557,16 +557,16 @@
      "output_type": "stream",
      "text": [
       "precision \n",
-      "\tmean (diff): -0.07182834604207207\n",
-      "\tstd (diff): 0.1403272275681411\n",
+      "\tmean (diff): -0.07182834588270136\n",
+      "\tstd (diff): 0.14032722722045357\n",
       "\n",
       "recall \n",
-      "\tmean (diff): -0.08700993007676487\n",
-      "\tstd (diff): 0.16570363511583777\n",
+      "\tmean (diff): -0.08700993031582092\n",
+      "\tstd (diff): 0.1657036352223075\n",
       "\n",
       "f1 \n",
       "\tmean (diff): -0.08003377452253659\n",
-      "\tstd (diff): 0.1536430556825795\n",
+      "\tstd (diff): 0.15364305560255223\n",
       "\n"
      ]
     }
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,15 +588,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define conditions\n",
+    "epsilon = 0.005\n",
+    "\n",
     "conditions = [\n",
-    "    df_results['f1_diff'] > 0,\n",
-    "    df_results['f1_diff'] < 0,\n",
-    "    df_results['f1_diff'] == 0\n",
+    "    df_results['f1_diff'] > epsilon,\n",
+    "    df_results['f1_diff'] < -epsilon,\n",
+    "    (df_results['f1_diff'] >= -epsilon) & (df_results['f1_diff'] <= epsilon)  # Values close to zero\n",
     "]\n",
     "\n",
     "# Assign values based on conditions\n",
@@ -606,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +621,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -654,16 +656,16 @@
       "Frequency Matrix:\n",
       " f1_direction    0  negative  positive\n",
       "Has bias                             \n",
-      "NO             78       164         8\n",
-      "Not-biasable  254       156        36\n",
-      "YES            17        27         8\n",
+      "NO             98       152         0\n",
+      "Not-biasable  330       116         0\n",
+      "YES            23        24         5\n",
       "\n",
       "Percentage Matrix:\n",
-      " f1_direction          0   negative   positive\n",
-      "Has bias                                     \n",
-      "NO            31.200000  65.600000   3.200000\n",
-      "Not-biasable  56.950673  34.977578   8.071749\n",
-      "YES           32.692308  51.923077  15.384615\n"
+      " f1_direction          0   negative  positive\n",
+      "Has bias                                    \n",
+      "NO            39.200000  60.800000  0.000000\n",
+      "Not-biasable  73.991031  26.008969  0.000000\n",
+      "YES           44.230769  46.153846  9.615385\n"
      ]
     }
    ],
