--- a/notebooks/eval/bertscore-casual.ipynb
+++ b/notebooks/eval/bertscore-casual.ipynb
@@ -496,15 +496,15 @@
      "text": [
       "precision \n",
       "\tmean (diff): -0.0005592012496860436\n",
-      "\tstd (diff): 0.008015600956102166\n",
+      "\tstd (diff): 0.008015600956101598\n",
       "\n",
       "recall \n",
       "\tmean (diff): -0.0004410390811198203\n",
-      "\tstd (diff): 0.0179361198893803\n",
+      "\tstd (diff): 0.017936119889380552\n",
       "\n",
       "f1 \n",
       "\tmean (diff): -0.0005302721124780757\n",
-      "\tstd (diff): 0.0133938880821904\n",
+      "\tstd (diff): 0.013393888082190738\n",
       "\n"
      ]
     }
@@ -531,10 +531,12 @@
    "outputs": [],
    "source": [
     "# Define conditions\n",
+    "epsilon = 0.005\n",
+    "\n",
     "conditions = [\n",
-    "    df_results['f1_diff'] > 0,\n",
-    "    df_results['f1_diff'] < 0,\n",
-    "    df_results['f1_diff'] == 0\n",
+    "    df_results['f1_diff'] > epsilon,\n",
+    "    df_results['f1_diff'] < -epsilon,\n",
+    "    (df_results['f1_diff'] >= -epsilon) & (df_results['f1_diff'] <= epsilon)  # Values close to zero\n",
     "]\n",
     "\n",
     "# Assign values based on conditions\n",
@@ -592,16 +594,16 @@
       "Frequency Matrix:\n",
       " f1_direction    0  negative  positive\n",
       "Has bias                             \n",
-      "NO            206        41        24\n",
-      "Not-biasable  359        59        35\n",
-      "YES            20        10        28\n",
+      "NO            259        12         0\n",
+      "Not-biasable  445         8         0\n",
+      "YES            32         5        21\n",
       "\n",
       "Percentage Matrix:\n",
-      " f1_direction          0   negative   positive\n",
-      "Has bias                                     \n",
-      "NO            76.014760  15.129151   8.856089\n",
-      "Not-biasable  79.249448  13.024283   7.726269\n",
-      "YES           34.482759  17.241379  48.275862\n"
+      " f1_direction          0  negative   positive\n",
+      "Has bias                                    \n",
+      "NO            95.571956  4.428044   0.000000\n",
+      "Not-biasable  98.233996  1.766004   0.000000\n",
+      "YES           55.172414  8.620690  36.206897\n"
      ]
     }
    ],
